--- a/projects/vue-quote/package.json
+++ b/projects/vue-quote/package.json
@@ -9,6 +9,8 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "jquery": "^3.2.1",
+    "semantic-ui-css": "^2.2.10",
     "vue": "^2.3.3"
   },
   "devDependencies": {
